Use optimised factory methods